--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,7 @@
 body, html{
   padding-top: 50px;
   background: #F8F8F8;
-  font-family: "Oswald", Helvetica, Arial, sans-serif!important;
+  font-family: "Oswald", sans-serif !important;
 }
 
 
