--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,10 @@ body, html{
   font-family: "Oswald", sans-serif !important;
 }
 
+.lead {
+  font-weight: 300;
+}
+
 .arrow-up {
   width: 0;
   height: 0;
