--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ body, html{
   padding-top: 50px;
   background: #F8F8F8;
   font-family: "Oswald", sans-serif !important;
-  height: 100%;
+  height: 100% !important;
 }
 
 
