--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -71,20 +71,22 @@ body, html{
 .about {
   background: rgba(180, 18, 5, 0.7);
   padding-bottom: 100px;
-
+  border-bottom: 6px solid black;
 }
 
 .card a {
-  color: rgba(200,200,200,.8);
+  /*color: rgba(200,200,200,.8);*/
+  color: rgba(20,20,20,.8);
 }
 
 .card  {
-  background: rgba(8,20,20,.9);
+  background: rgba(250,250,250,1);
+  /*background: rgba(8,20,20,.9);*/
   padding: 10px 10px 10px 10px;
-  color: rgba(200,200,200,.8);
-  font-size: 24px;
+  font-size: 26px;
   text-align: left;
   margin: 10px;
+  border: 3px solid black;
 }
 
 #card  {
@@ -110,12 +112,14 @@ body, html{
   padding-top: 50px;
   padding-bottom: 300px;
   height: 100%;
+  border-bottom: 6px solid black;
 }
 
 .section2 {
   background: rgba(40, 100, 50, .7);
   text-align: center;
   padding: 40px 15px 300px 15px;
+  border-bottom: 6px solid black;
 }
 
 .section2 #projects .card {
