--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ body, html{
   height: 0;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
-  border-bottom: 15px solid white;
+  border-bottom: 15px solid black;
 }
 
 .arrow-down {
@@ -55,7 +55,7 @@ body, html{
 
 
 #navbar li :hover {
-  background-color: lightblue;
+  background-color: #FAF0E6;
   transition: background-color 0.8s ease;
 }
 
@@ -132,7 +132,7 @@ body, html{
 }
 
 .section3 {
-    background: rgba(0, 100, 200, 0.8);
+    background: white;
     padding-bottom: 100px;
 }
 
@@ -197,11 +197,10 @@ footer {
   font-size: 20px;
 }
 
-
-
-
-
-
+.lead .row {
+  padding: 35px 70px;
+  margin-right: 10px;
+}
 
 
 /*card flip not working*/
