--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,7 @@ body, html{
   background: #F8F8F8;
   font-family: "Oswald", sans-serif !important;
   height: 100% !important;
+  text-shadow: 1px 0px black;
 }
 
 
