--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 
 body, html{
-  background: #F8F8F8;
+  background: linen;
   font-family: "Oswald", sans-serif !important;
   height: 100% !important;
   text-shadow: 1px 0px black;
@@ -49,14 +49,14 @@ body, html{
 }*/
 
 /*#section01 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg07.jpg) center center / cover no-repeat;}*/
-#section02 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg08.jpg) center center / cover no-repeat;}
-#section03 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg09.jpg) center center / cover no-repeat;}
+/*#section02 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg08.jpg) center center / cover no-repeat;}*/
+/*#section03 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg09.jpg) center center / cover no-repeat;}*/
 /*#section04 { background: url(http://www.nxworld.net/codepen/css-scroll-down-button/bg10.jpg) center center / cover no-repeat;}*/
 
 
 
 #navbar li :hover {
-  background-color: #FAF0E6;
+  background-color: lightblue;
   transition: background-color 0.8s ease;
 }
 
@@ -70,7 +70,7 @@ body, html{
 }
 
 .about {
-  background: rgba(180, 18, 5, 0.7);
+  background: #FFFFFF;
   padding-bottom: 100px;
   border-bottom: 6px solid black;
 }
@@ -82,7 +82,7 @@ body, html{
 
 .card  {
   /*background: rgba(250,250,250,1);*/
-  background: rgba(180,50,20,.5);
+  background: rgba(50,50,50,.2);
   padding: 10px 10px 10px 10px;
   font-size: 26px;
   text-align: left;
@@ -117,7 +117,7 @@ body, html{
 }
 
 .section2 {
-  background: rgba(40, 100, 50, .7);
+  background: #FFFFFF;
   text-align: center;
   padding: 40px 15px 300px 15px;
   border-bottom: 6px solid black;
@@ -133,7 +133,7 @@ body, html{
 }
 
 .section3 {
-    background: white;
+    background: #FFFFFF;
     padding-bottom: 100px;
 }
 
@@ -183,75 +183,12 @@ footer {
 }
 
 
-/*styles of background images above*/
-
-.about h1 {
-  color: white;
-  font-size: 36px;
-  text-shadow: 2px 2px black;
-}
-
-
 .about p{
-  color: white;
-  text-shadow: 1px 1px black;
   font-size: 20px;
 }
+
 
 .lead .row {
   padding: 35px 70px;
   margin-right: 10px;
 }
-
-
-/*card flip not working*/
-
-/*.full {
-  height: 100%
-}*/
-
-/*practice*/
-/*body {
-    background: #ccc;
-}
-.flip {
-    -webkit-perspective: 800;
-    width: 400px;
-    height: 200px;
-    position: relative;
-    margin: 50px auto;
-}
-.flip .card.flipped {
-    -webkit-transform: rotatex(-180deg);
-}
-.flip .card {
-    width: 100%;
-    height: 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-transition: 0.5s;
-}
-.flip .card .face {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    -webkit-backface-visibility: hidden;
-    z-index: 2;
-    font-family: Georgia;
-    font-size: 3em;
-    text-align: center;
-    line-height: 200px;
-}
-.flip .card .front {
-    position: absolute;
-    z-index: 1;
-    background: black;
-    color: white;
-    cursor: pointer;
-}
-.flip .card .back {
-    -webkit-transform: rotatex(-180deg);
-    background: blue;
-    background: white;
-    color: black;
-    cursor: pointer;
-}*/
